[gd_scene load_steps=3 format=3 uid="uid://ctmtuq88r06jt"]

[ext_resource type="Script" path="res://SpacePort/ShipShop/ShipShop.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b418d6fo6c6l4" path="res://Ship/ShipInfoWindow/ShipInfo.tscn" id="2"]

[node name="ShipShop" type="Control"]
script = ExtResource( "1" )
metadata/_edit_use_custom_anchors = false

[node name="ShipInfo" parent="." instance=ExtResource( "2" )]
minimum_size = Vector2(300, 400)
offset_left = 29.0
offset_top = 22.0
offset_right = 329.0
offset_bottom = 422.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="last" type="Button" parent="ShipInfo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = 162.0
offset_right = -25.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
text = "<"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="next" type="Button" parent="ShipInfo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 27.0
offset_top = 161.0
offset_right = 45.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
text = ">"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Buy" type="Button" parent="ShipInfo"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -19.0
offset_top = -39.0
offset_right = 19.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
text = "Buy"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[connection signal="pressed" from="ShipInfo/last" to="." method="_on_last_pressed"]
[connection signal="pressed" from="ShipInfo/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="ShipInfo/Buy" to="." method="_on_Buy_pressed"]
